簡単な静的サイトの表示はできるはず

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/index.css">
     <title>Practice Ec2</title>
 </head>
 <body>
-    <h1>Hello, Panda!!!</h1>
-    <h3>Nice to me you.</h3>
+    <h1>Hello, World!!!</h1>
+    <h3>Nice to meet to you.</h3>
+    <h3 class="check-css">If this sentence is green, css is effective.</h3>
+    <h2 id="msg">Script</h2>
     <img src="./mouse.png" alt="mouse">
+    <script src="../src/index.js"></script>
 </body>
 </html>
